# reddit_scrapper

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: example_homelab.yaml  pesticides_fruits.yaml  pesticides_fruits_fr.yaml
docs/: project-history.md
output/avatars/: first-tech-homelab-20260413.md
prompts/: cluster_avatars.md  extract_signals.md  suggest_subreddits.md  synthesize_avatar.md
src/reddit_avatar/: __init__.py  cli.py  cluster.py  config.py  extract.py  harvest.py  lint.py  llm.py  render.py  schemas.py  store.py  suggest.py  synthesize.py
templates/: avatar_report.md.j2
tests/: test_config.py  test_harvest.py  test_schemas.py  test_store.py
